# rust_testing

./: .gitignore  CNAME  Cargo.toml  index.html  rust-gh-pages-a833c95f746561cd.js  rust-gh-pages-a833c95f746561cd_bg.wasm  style.css
.github/workflows/: deploy.yml
src/: app.rs  main.rs
