[package]
name = "rust-gh-pages"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-wasm = "0.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
